[gd_scene load_steps=15 format=3 uid="uid://di5jjqqiofweh"]

[ext_resource type="Script" path="res://Script/enemy_boss_sludgeknight.gd" id="1_pw6be"]
[ext_resource type="Texture2D" uid="uid://bb421vdm7lu2" path="res://Assets/Bosshealthbar-empty.png" id="2_vslwl"]
[ext_resource type="Texture2D" uid="uid://d2cvcawr3bnjv" path="res://Assets/Bosshealthbar-full.png" id="3_gv25d"]
[ext_resource type="FontFile" uid="uid://bu5hdtbp88ojw" path="res://Fonts/EXEPixelPerfect.ttf" id="4_qxga1"]
[ext_resource type="Texture2D" uid="uid://bpt5xouk1ltxv" path="res://Assets/Bigprojsprites-bigcircle.png" id="5_5o48w"]
[ext_resource type="Texture2D" uid="uid://fbcd0hykq1ho" path="res://Assets/SludgeKnight_Helmet.png" id="7_mhbmh"]
[ext_resource type="Texture2D" uid="uid://dn6qvorb6l4b2" path="res://Assets/Sludgeknight_Body.png" id="7_x75rx"]
[ext_resource type="Texture2D" uid="uid://ditkmrdmoscht" path="res://Assets/rotatingarrow.png" id="7_yaphl"]
[ext_resource type="Texture2D" uid="uid://bgky1tcemyfw2" path="res://Assets/SludgeKnight_Blade.png" id="9_4hid5"]

[sub_resource type="Animation" id="Animation_601at"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.436332]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-30, 16)]
}

[sub_resource type="Animation" id="Animation_0sy1m"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-30, 16), Vector2(-30, 14), Vector2(-30, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.436332, -0.358192, -0.436332]
}

[sub_resource type="Animation" id="Animation_uhv5q"]
resource_name = "swing"
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.4, 1.45, 1.6, 1.75, 1.85, 1.9, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-30, 16), Vector2(-33, 1), Vector2(-32, -6), Vector2(-38, 3), Vector2(0, 30), Vector2(35, 0), Vector2(29, -7), Vector2(27, -9), Vector2(-30, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.4, 1.45, 1.6, 1.75, 1.85, 1.9, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.436332, 0.0867463, 0.298201, -0.890658, -3.14159, -5.41234, -5.79535, -5.93825, -0.436332]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"endattack"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q3noj"]
_data = {
"RESET": SubResource("Animation_601at"),
"idle": SubResource("Animation_0sy1m"),
"swing": SubResource("Animation_uhv5q")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1rmrd"]
radius = 23.0

[node name="Enemy_Sludgeknight" type="CharacterBody2D" groups=["enemy_m"]]
z_index = 1
texture_filter = 1
script = ExtResource("1_pw6be")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Healthbar" type="TextureProgressBar" parent="UI"]
offset_left = 46.0
offset_top = 9.0
offset_right = 246.0
offset_bottom = 19.0
max_value = 2000.0
value = 2000.0
texture_under = ExtResource("2_vslwl")
texture_progress = ExtResource("3_gv25d")

[node name="Bossname" type="Label" parent="UI"]
texture_filter = 1
offset_left = 46.0
offset_right = 246.0
offset_bottom = 13.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_qxga1")
text = "Sludge Knight"
horizontal_alignment = 1

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.501961)
texture_filter = 1
position = Vector2(0, 18)
scale = Vector2(1, 0.640001)
texture = ExtResource("5_5o48w")

[node name="Sprites" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Body" type="Sprite2D" parent="Sprites"]
texture = ExtResource("7_x75rx")
hframes = 2
vframes = 4

[node name="Helmet" type="Sprite2D" parent="Sprites"]
z_index = 1
position = Vector2(0, -17)
texture = ExtResource("7_mhbmh")
hframes = 4
vframes = 2

[node name="Anim" type="AnimationPlayer" parent="Sprites"]

[node name="Blade" type="Node2D" parent="Sprites"]
y_sort_enabled = true

[node name="BladePivotpoint" type="Node2D" parent="Sprites/Blade"]
position = Vector2(-30, 16)
rotation = -0.436332
metadata/_edit_group_ = true

[node name="SludgeKnightBlade" type="Sprite2D" parent="Sprites/Blade/BladePivotpoint"]
position = Vector2(0, -26)
texture = ExtResource("9_4hid5")

[node name="Swordanimation" type="AnimationPlayer" parent="Sprites/Blade/BladePivotpoint"]
libraries = {
"": SubResource("AnimationLibrary_q3noj")
}
blend_times = [&"swing", &"idle", 0.2]

[node name="Rot" type="Node2D" parent="."]

[node name="Rotatingarrow" type="Sprite2D" parent="Rot"]
texture_filter = 1
rotation = 1.5708
texture = ExtResource("7_yaphl")

[node name="HURTbox_Enemy" type="Area2D" parent="."]

[node name="box" type="CollisionShape2D" parent="HURTbox_Enemy"]
shape = SubResource("CircleShape2D_1rmrd")

[node name="TestLabel" type="Label" parent="."]
visible = false
offset_left = -47.0
offset_top = -65.0
offset_right = 46.0
offset_bottom = -39.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_qxga1")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="Timers" type="Node" parent="."]

[node name="UpdateTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true
autostart = true

[node name="AttackTimer" type="Timer" parent="Timers"]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timers/UpdateTimer" to="." method="_on_update_timer_timeout"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]
